src/objects/Client_Event__c.object
<CustomObject>
    <description>An event for a client that may or may not be happening at a client location</description>
    <fields>
        <fullName>Client_Location__c</fullName>
        <description>The location that the event is taking place at</description>
        <label>Client Location</label>
        <referenceTo>Client_Location__c</referenceTo>
        <relationshipLabel>Client Events</relationshipLabel>
        <relationshipName>Client_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the event</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>The display name for the event that will show on maps and dashboards to identify it</description>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time that the event is to end</description>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>The latitude of the event. If set will override the location in the parent location.</description>
        <label>Latitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The longitude of the event. If this is set it overrides the location give by the parent client location</description>
        <label>Longitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The date time of the start of the event</description>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of event</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>FVR Radio Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Voice Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000000000}</displayFormat>
        <label>Client Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>